@@ -7,6 +7,7 @@ New features:
   search (the rest are searched with exact matches). Implemented for
   all directories.
 - Enable tooltip help in creation and edition using widget/help property.
+- Implemented ZODB Directory.
 Bug fixes:
 ~~~~~~~~~~
 - Correctly fail when trying to create an already existing member.
